- 
    Bug 
- 
    Resolution: Done
- 
    P1: Critical 
- 
    Qt Creator 3.3.0-rc1
- 
    None
If you enable the Synchronize with Editor feature of the projects treeview and open a session with a project and a file of that project opened the pane isn't synchronized. You have to wait for the project to be parsed and switch the editor to re enable that feature.
| For Gerrit Dashboard: QTCREATORBUG-13357 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 99886,5 | Completely rework currentNode/currentProject handling | 3.3 | qt-creator/qt-creator | Status: ABANDONED | 0 | 0 | 
| 100299,2 | QmakeProject: Set current Node after first parse | 3.3 | qt-creator/qt-creator | Status: MERGED | +2 | 0 | 
| 100300,6 | Completely rework currentNode/currentProject handling | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |