QmakeProject: Set current Node after first parse

We reuse the m_checkForTemplateUpdate cariable, since this is going
to be reverted in master and replaced by a rework of the current node
handling anyway.

Task-number: QTCREATORBUG-13357
Change-Id: I7deb564219f258753263f3e1473625ce749393fd
Reviewed-by: Eike Ziller <eike.ziller@theqtcompany.com>